--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,11 @@
 ## spring.jpa.show-sql=true
 ## spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2005Dialect
 # spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
 spring.http.multipart.max-file-size=500MB
 spring.http.multipart.max-request-size=500MB
 spring.http.multipart.enabled=true
+spring.http.multipart.location= /filestorage
 
 #spring.jpa.database-platform=com.sqlite.config.SQLiteDialect
 #spring.jpa.hibernate.ddl-auto=create-drop
@@ -23,7 +25,7 @@ spring.http.multipart.enabled=true
 
 
 
-spring,datasource.database-platform=gr.algo.AlgoMobileServer.config.SQLiteDialect
+#spring,datasource.database-platform=gr.algo.AlgoMobileServer.config.SQLiteDialect
 
 spring.second-datasource.url=jdbc:sqlserver://192.168.2.249:1433;databaseName=xLINENICEICE
 spring.second-datasource.username=sa
