Subsidiary-Triangle transactions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,10 +27,22 @@ spring.http.multipart.location= /filestorage
 
 #spring,datasource.database-platform=gr.algo.AlgoMobileServer.config.SQLiteDialect
 
-spring.second-datasource.url=jdbc:sqlserver://192.168.2.249:1433;databaseName=xLINENICEICE
+spring.second-datasource.url=jdbc:sqlserver://192.168.2.249:1433;databaseName=XT_002_2019
 spring.second-datasource.username=sa
 spring.second-datasource.password=600096
 spring.second-datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 
+algo.lui.application=capital
+algo.lui.comid=1
+algo.lui.salesmanid=1
+algo.lui.customerpricesquery=with cust as (select c.id cusid,c.grpid grpid from altec.customer c where c.comid=2),item as(select m.id iteid from altec.material m where m.mpcid=154),timol as(select cust.cusid cusid,isnull(pr.fld1,0) discount1,isnull(pr.fld2,0) discount2 from altec.prdata pr inner join cust on cust.grpid=pr.domainid2 where pr.prpid in (10,18) and pr.domainid1=154 and cust.cusid not in (2246) union select cust.cusid cusid,isnull(pr.fld1,0) isnull(discount1,0),isnull(pr.fld2,0) discount2 from altec.prdata pr inner join cust on cust.cusid=pr.domainid1 where pr.prpid in (13) and pr.domainid2=154) select timol.cusid,item.iteid,timol.discount1,timol.discount2 from item,timol
+algo.lui.sqlserverurl="jdbc:sqlserver://192.168.2.249:1433;databaseName=XT_002_2019"
+algo.lui.customercodemask=99
 
+
+algo.kavoukis.application=capital
+algo.kavoukis.comid=2
+algo.kavoukis.salesmanid=1
+algo.kavoukis.customerpricesquery= with cust as (select c.id cusid,c.grpid grpid from altec.customer c where c.comid=2),item as(select m.id iteid from altec.material m where m.mpcid=154),timol as(select cust.cusid cusid,isnull(pr.fld1,0) discount1,isnull(pr.fld2,0) discount2 from altec.prdata pr inner join cust on cust.grpid=pr.domainid2 where pr.prpid in (10,18) and pr.domainid1=154 and cust.cusid not in (2246) union select cust.cusid cusid,isnull(pr.fld1,0) isnull(discount1,0),isnull(pr.fld2,0) discount2 from altec.prdata pr inner join cust on cust.cusid=pr.domainid1 where pr.prpid in (13) and pr.domainid2=154) select timol.cusid,item.iteid,timol.discount1,timol.discount2 from item,timol
+algo.kavoukis.sqlserverurl= jdbc:sqlserver://192.168.2.249:1433;databaseName=XT_002_2019 algo.kavoukis.customercodemask=99
