--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,9 @@
 ## spring.jpa.hibernate.dialect=org.hibernate.dialect.SQLServer2005Dialect
 # spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
 
-spring.http.multipart.max-file-size=500MB
-spring.http.multipart.max-request-size=500MB
+
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
 spring.http.multipart.enabled=true
 spring.http.multipart.location= /filestorage
 
@@ -27,9 +28,11 @@ spring.http.multipart.location= /filestorage
 
 #spring,datasource.database-platform=gr.algo.AlgoMobileServer.config.SQLiteDialect
 
-spring.second-datasource.url=jdbc:sqlserver://192.168.2.249:1433;databaseName=XT_002_2019
-spring.second-datasource.username=sa
-spring.second-datasource.password=600096
+#spring.second-datasource.url=jdbc:sqlserver://192.168.2.249:1433;databaseName=XT_002_2019
+#spring.second-datasource.url=jdbc:sqlserver://127.0.0.1;databaseName=XT_002_2019
+spring.second-datasource.url=jdbc:sqlserver://192.168.178.200;databaseName=atlantis
+spring.second-datasource.username=altec
+spring.second-datasource.password=altec
 spring.second-datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 
@@ -37,12 +40,30 @@ algo.lui.application=capital
 algo.lui.comid=1
 algo.lui.salesmanid=1
 algo.lui.customerpricesquery=with cust as (select c.id cusid,c.grpid grpid from altec.customer c where c.comid=2),item as(select m.id iteid from altec.material m where m.mpcid=154),timol as(select cust.cusid cusid,isnull(pr.fld1,0) discount1,isnull(pr.fld2,0) discount2 from altec.prdata pr inner join cust on cust.grpid=pr.domainid2 where pr.prpid in (10,18) and pr.domainid1=154 and cust.cusid not in (2246) union select cust.cusid cusid,isnull(pr.fld1,0) isnull(discount1,0),isnull(pr.fld2,0) discount2 from altec.prdata pr inner join cust on cust.cusid=pr.domainid1 where pr.prpid in (13) and pr.domainid2=154) select timol.cusid,item.iteid,timol.discount1,timol.discount2 from item,timol
-algo.lui.sqlserverurl="jdbc:sqlserver://192.168.2.249:1433;databaseName=XT_002_2019"
+#algo.lui.sqlserverurl=jdbc:sqlserver://192.168.2.249:1433;databaseName=XT_002_2019
+algo.lui.sqlserverurl=jdbc:sqlserver://127.0.0.1;databaseName=XT_002_2019
 algo.lui.customercodemask=99
+algo.lui,tableprefix=""
 
 
-algo.kavoukis.application=capital
+algo.kavoukis.application=atlantis
 algo.kavoukis.comid=2
-algo.kavoukis.salesmanid=1
-algo.kavoukis.customerpricesquery= with cust as (select c.id cusid,c.grpid grpid from altec.customer c where c.comid=2),item as(select m.id iteid from altec.material m where m.mpcid=154),timol as(select cust.cusid cusid,isnull(pr.fld1,0) discount1,isnull(pr.fld2,0) discount2 from altec.prdata pr inner join cust on cust.grpid=pr.domainid2 where pr.prpid in (10,18) and pr.domainid1=154 and cust.cusid not in (2246) union select cust.cusid cusid,isnull(pr.fld1,0) isnull(discount1,0),isnull(pr.fld2,0) discount2 from altec.prdata pr inner join cust on cust.cusid=pr.domainid1 where pr.prpid in (13) and pr.domainid2=154) select timol.cusid,item.iteid,timol.discount1,timol.discount2 from item,timol
-algo.kavoukis.sqlserverurl= jdbc:sqlserver://192.168.2.249:1433;databaseName=XT_002_2019 algo.kavoukis.customercodemask=99
+algo.kavoukis.salesmanid=23
+algo.kavoukis.customerpricesquery= with cust as (select c.id cusid,c.grpid grpid from altec.customer c where c.comid=2),item as(select m.id iteid from altec.material m where m.mpcid=154),timol as(select cust.cusid cusid,isnull(pr.fld1,0) discount1,isnull(pr.fld2,0) discount2 from altec.prdata pr inner join cust on cust.grpid=pr.domainid2 where pr.prpid in (10,18) and pr.domainid1=154 and cust.cusid not in (2246) union select cust.cusid cusid,isnull(pr.fld1,0) discount1,isnull(pr.fld2,0) discount2 from altec.prdata pr inner join cust on cust.cusid=pr.domainid1 where pr.prpid in (13) and pr.domainid2=154) select timol.cusid,item.iteid,null,timol.discount1,timol.discount2 from item,timol
+algo.kavoukis.sqlserverurl= jdbc:sqlserver://192.168.178.200\\sql;databaseName=atlantis
+algo.kavoukis.customercodemask=99
+algo.kavoukis.materialcodemask=87
+algo.kavoukis,tableprefix="altec"
+
+
+algo.global.isReadyFile=1
+
+
+algo.testing.application=atlantis
+algo.testing.comid=1
+algo.testing.salesmanid=1
+algo.testing.customerpricesquery= with cust as (select c.id cusid,c.grpid grpid from customer c where c.comid=2),item as(select m.id iteid from material m where m.mpcid=154),timol as(select cust.cusid cusid,isnull(pr.fld1,0) discount1,isnull(pr.fld2,0) discount2 from prdata pr inner join cust on cust.grpid=pr.domainid2 where pr.prpid in (10,18) and pr.domainid1=154 and cust.cusid not in (2246) union select cust.cusid cusid,isnull(pr.fld1,0) discount1,isnull(pr.fld2,0) discount2 from prdata pr inner join cust on cust.cusid=pr.domainid1 where pr.prpid in (13) and pr.domainid2=154) select timol.cusid,item.iteid,timol.discount1,timol.discount2 from item,timol
+algo.testing.sqlserverurl= jdbc:sqlserver://192.168.2.249;databaseName=xlineniceice
+algo.testing.customercodemask=99
+algo.testing.materialcodemask=87
+algo.testing,tableprefix="dbo"
