Database moved error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,14 +46,14 @@ algo.lui.customercodemask=99
 algo.lui,tableprefix=""
 
 
-algo.kavoukis.application=atlantis
-algo.kavoukis.comid=2
-algo.kavoukis.salesmanid=23
-algo.kavoukis.customerpricesquery= with cust as (select c.id cusid,c.grpid grpid from altec.customer c where c.comid=2),item as(select m.id iteid from altec.material m where m.mpcid=154),timol as(select cust.cusid cusid,isnull(pr.fld1,0) discount1,isnull(pr.fld2,0) discount2 from altec.prdata pr inner join cust on cust.grpid=pr.domainid2 where pr.prpid in (10,18) and pr.domainid1=154 and cust.cusid not in (2246) union select cust.cusid cusid,isnull(pr.fld1,0) discount1,isnull(pr.fld2,0) discount2 from altec.prdata pr inner join cust on cust.cusid=pr.domainid1 where pr.prpid in (13) and pr.domainid2=154) select timol.cusid,item.iteid,null,timol.discount1,timol.discount2 from item,timol
-algo.kavoukis.sqlserverurl= jdbc:sqlserver://192.168.178.200\\sql;databaseName=atlantis
-algo.kavoukis.customercodemask=99
-algo.kavoukis.materialcodemask=87
-algo.kavoukis,tableprefix="altec"
+algo.application=atlantis
+algo.comid=2
+algo.salesmanid=23
+algo.customerpricesquery= with cust as (select c.id cusid,c.grpid grpid from altec.customer c where c.comid=2),item as(select m.id iteid from altec.material m where m.mpcid=154),timol as(select cust.cusid cusid,isnull(pr.fld1,0) discount1,isnull(pr.fld2,0) discount2 from altec.prdata pr inner join cust on cust.grpid=pr.domainid2 where pr.prpid in (10,18) and pr.domainid1=154 and cust.cusid not in (2246) union select cust.cusid cusid,isnull(pr.fld1,0) discount1,isnull(pr.fld2,0) discount2 from altec.prdata pr inner join cust on cust.cusid=pr.domainid1 where pr.prpid in (13) and pr.domainid2=154) select timol.cusid,item.iteid,null,timol.discount1,timol.discount2 from item,timol
+algo.sqlserverurl= jdbc:sqlserver://192.168.178.200\\sql;databaseName=atlantis
+algo.customercodemask=99
+algo.materialcodemask=87
+algo.tableprefix="altec"
 
 
 algo.global.isReadyFile=1
